packages/colmena-ai/colmena_ai-0.2.0.tar.gz/colmena_ai-0.2.0/check_output.txt
    Checking colmena v0.1.0 (/home/daniel-garcia4/startti/colmena)
error[E0412]: cannot find type `Arc` in this scope
  --> src/dag_engine/domain/node.rs:30:26
   |
30 |         observer: Option<Arc<dyn ExecutionObserver>>,
   |                          ^^^ not found in this scope
   |
help: consider importing this struct
   |
 1 + use std::sync::Arc;
   |

error[E0405]: cannot find trait `ExecutionObserver` in this scope
  --> src/dag_engine/domain/node.rs:30:34
   |
30 |         observer: Option<Arc<dyn ExecutionObserver>>,
   |                                  ^^^^^^^^^^^^^^^^^ not found in this scope
   |
help: consider importing this trait
   |
 1 + use crate::dag_engine::domain::observer::ExecutionObserver;
   |

error[E0412]: cannot find type `Arc` in this scope
  --> src/dag_engine/infrastructure/nodes/debug.rs:17:27
   |
17 |         _observer: Option<Arc<dyn crate::dag_engine::domain::observer::ExecutionObserver>>,
   |                           ^^^ not found in this scope
   |
help: consider importing this struct
   |
 2 + use std::sync::Arc;
   |

error[E0412]: cannot find type `Arc` in this scope
  --> src/dag_engine/infrastructure/nodes/debug.rs:45:27
   |
45 |         _observer: Option<Arc<dyn crate::dag_engine::domain::observer::ExecutionObserver>>,
   |                           ^^^ not found in this scope
   |
help: consider importing this struct
   |
 2 + use std::sync::Arc;
   |

error[E0412]: cannot find type `Arc` in this scope
  --> src/dag_engine/infrastructure/nodes/http.rs:43:27
   |
43 |         _observer: Option<Arc<dyn crate::dag_engine::domain::observer::ExecutionObserver>>,
   |                           ^^^ not found in this scope
   |
help: consider importing this struct
   |
 1 + use std::sync::Arc;
   |

error[E0412]: cannot find type `Arc` in this scope
  --> src/dag_engine/infrastructure/nodes/math.rs:31:27
   |
31 |         _observer: Option<Arc<dyn crate::dag_engine::domain::observer::ExecutionObserver>>,
   |                           ^^^ not found in this scope
   |
help: consider importing this struct
   |
 2 + use std::sync::Arc;
   |

error[E0412]: cannot find type `Arc` in this scope
  --> src/dag_engine/infrastructure/nodes/math.rs:51:27
   |
51 |         _observer: Option<Arc<dyn crate::dag_engine::domain::observer::ExecutionObserver>>,
   |                           ^^^ not found in this scope
   |
help: consider importing this struct
   |
 2 + use std::sync::Arc;
   |

error[E0412]: cannot find type `Arc` in this scope
  --> src/dag_engine/infrastructure/nodes/math.rs:71:27
   |
71 |         _observer: Option<Arc<dyn crate::dag_engine::domain::observer::ExecutionObserver>>,
   |                           ^^^ not found in this scope
   |
help: consider importing this struct
   |
 2 + use std::sync::Arc;
   |

error[E0412]: cannot find type `Arc` in this scope
  --> src/dag_engine/infrastructure/nodes/math.rs:91:27
   |
91 |         _observer: Option<Arc<dyn crate::dag_engine::domain::observer::ExecutionObserver>>,
   |                           ^^^ not found in this scope
   |
help: consider importing this struct
   |
 2 + use std::sync::Arc;
   |

error[E0412]: cannot find type `Arc` in this scope
   --> src/dag_engine/infrastructure/nodes/math.rs:113:27
    |
113 |         _observer: Option<Arc<dyn crate::dag_engine::domain::observer::ExecutionObserver>>,
    |                           ^^^ not found in this scope
    |
help: consider importing this struct
    |
  2 + use std::sync::Arc;
    |

warning: unused import: `ToolDefinition`
 --> src/dag_engine/infrastructure/nodes/llm.rs:4:65
  |
4 |     LlmConfig, LlmMessage, LlmProvider, ProviderKind, ThreadId, ToolDefinition, ToolExecutor,
  |                                                                 ^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0599]: `futures::stream::Iter<std::vec::IntoIter<std::string::String>>` is not an iterator
  --> src/llm/infrastructure/mock_adapter.rs:51:43
   |
51 |         let stream = stream::iter(chunks).map(move |chunk_text| {
   |                      ---------------------^^^ `futures::stream::Iter<std::vec::IntoIter<std::string::String>>` is not an iterator
   |
  ::: /home/daniel-garcia4/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/futures-util-0.3.31/src/stream/iter.rs:9:1
   |
 9 | pub struct Iter<I> {
   | ------------------ doesn't satisfy `_: Iterator`
   |
   = note: the following trait bounds were not satisfied:
           `futures::stream::Iter<std::vec::IntoIter<std::string::String>>: Iterator`
           which is required by `&mut futures::stream::Iter<std::vec::IntoIter<std::string::String>>: Iterator`
   = help: items from traits can only be used if the trait is in scope
help: the following traits which provide `map` are implemented but not in scope; perhaps you want to import one of them
   |
 1 + use futures::StreamExt;
   |
 1 + use tokio_stream::StreamExt;
   |

warning: unused variable: `node_id`
   --> src/dag_engine/infrastructure/nodes/llm.rs:339:21
    |
339 |                 let node_id = "unknown".to_string(); // We don't have node_id here easily without passing it or capturing it. 
    |                     ^^^^^^^ help: if this is intentional, prefix it with an underscore: `_node_id`
    |
    = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

Some errors have detailed explanations: E0405, E0412, E0599.
For more information about an error, try `rustc --explain E0405`.
warning: `colmena` (lib) generated 2 warnings
error: could not compile `colmena` (lib) due to 11 previous errors; 2 warnings emitted
